--- a/templates/account/login.html.twig
+++ b/templates/account/login.html.twig
@@ -4,33 +4,47 @@
 
 {% block body %}
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
-            <div class="bg-light py-3 px-3">
-                <h1>Connectez vous</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <div class="bg-light py-3 px-3">
+                    <h1>Connectez vous</h1>
 
-                {% if hasError %}
-                    <div class="alert alert-danger">Une erreur est survenue, le nom/mot de passe est invalide</div>
-                {% endif %}
+                    {% if hasError %}
+                        <div class="alert alert-danger">Une erreur est survenue, le nom/mot de passe est invalide</div>
+                    {% endif %}
 
-                <form action="{{path('account_login')}}" method="post">
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="text" name="_username" id="email" class="form-control" placeholder="Adresse email..." value="{{username}}" required>
+                    <form action="{{ path('account_login') }}" method="post">
+                        <div class="form-group">
+                            <label for="inputEmail">Email</label>
+                            <input type="email" value="{{ username }}" name="email" id="inputEmail" class="form-control"
+                                   placeholder="Email" required autofocus>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputPassword" class="sr-only">Mot de passe</label>
+                            <input type="password" name="password" id="inputPassword" class="form-control"
+                                   placeholder="Password" required>
+                        </div>
+
+                        <input type="hidden" name="_csrf_token"
+                               value="{{ csrf_token('authenticate') }}"
+                        >
+                        <div class="checkbox mb-3">
+                            <label>
+                                <input type="checkbox" name="_remember_me"> Se souvenir de moi
+                            </label>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-success">Connexion</button>
+                        </div>
+                    </form>
+                    <div>
+                        <a  href="{{ path('app_forgotten_password') }}">Mot de passe oublié ?</a>
                     </div>
-                    <div class="form-group">
-                        <label for="password">Mot de passe</label>
-                        <input type="password" name="_password" id="password" class="form-control" placeholder="Mot de passe..." required>
-                    </div>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-success">Connexion</button>
-                    </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
 {% endblock %}
